--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,3 +20,20 @@
     width: 50%;
   }
 }
+
+@media screen and (min-width: $md) {
+
+  .me-img-wrapper {
+    position: relative;
+    height: 0;
+    padding-top: 100%;
+  }
+
+  .me {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    height: auto;
+  }
+}
