--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,7 +10,7 @@
   padding-right: 7rem;
 }
 
-.me-img {
+.me {
   border-radius: 50%;
 }
 
@@ -25,7 +25,6 @@
   margin-bottom: 20px;
   border-radius: 8px;
   object-fit: cover;
-
 }
 
 .travel-pic.small {
